Adjust width of edit button to 55px

--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ select {
 
 .edit-btn {
     height: 35px;
-    width: fit-content;
+    width: 55px;
     color: var(--color-bg-surface);
     background: var(--color-primary);
     display: flex;
